[gd_scene load_steps=3 format=2]

[ext_resource path="res://rooms/galley_room/puzzle/puzzle.png" type="Texture" id=1]
[ext_resource path="res://rooms/galley_room/puzzle/puzzle.gd" type="Script" id=2]

[node name="puzzle" type="Node2D"]
z_index = 100
z_as_relative = false
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 765, 512 )
texture = ExtResource( 1 )

[node name="Reset" type="Button" parent="."]
margin_left = 1230.0
margin_top = 300.0
margin_right = 1310.0
margin_bottom = 340.0
rect_scale = Vector2( 2, 2 )
text = "Reset"

[node name="Exit" type="Button" parent="."]
margin_left = 1230.0
margin_top = 400.0
margin_right = 1310.0
margin_bottom = 440.0
rect_scale = Vector2( 2, 2 )
text = "Exit"

[node name="Skip" type="Button" parent="."]
margin_left = 1230.0
margin_top = 500.0
margin_right = 1310.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )
text = "Skip"

[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
